fix: update api statistics
